--- a/study_app/pubspec.yaml
+++ b/study_app/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   google_fonts: ^6.3.3
   file_picker: ^8.1.2
   audioplayers: ^6.1.0
+  quiver: ^3.2.1
+  http: ^1.2.0
+  llama_cpp_dart: ^0.0.9
+  archive: ^3.5.1
+  sqlite3: ^2.4.0
+  sqlite3_flutter_libs: ^0.5.24
 
 dev_dependencies:
   isar_generator: ^3.1.0+1
