--- a/study_app/pubspec.yaml
+++ b/study_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.5
+  path_provider_windows: ^2.3.0
   path: ^1.9.0
   flutter_quill: ^11.5.0
   google_fonts: ^6.3.3
@@ -48,6 +49,7 @@ dependencies:
   archive: ^3.5.1
   sqlite3: ^2.4.0
   sqlite3_flutter_libs: ^0.5.24
+  signature: ^5.4.2
 
 dev_dependencies:
   isar_generator: ^3.1.0+1
