--- a/study_app/pubspec.yaml
+++ b/study_app/pubspec.yaml
@@ -46,12 +46,14 @@ dependencies:
   quiver: ^3.2.1
   http: ^1.2.0
   llama_cpp_dart: ^0.0.9
+  shared_preferences: ^2.3.2
   archive: ^3.5.1
   sqlite3: ^2.4.0
   sqlite3_flutter_libs: ^0.5.24
   signature: ^5.4.2
   flutter_local_notifications: ^17.2.2
   timezone: ^0.9.2
+  rename: ^3.1.0
 
 dev_dependencies:
   isar_generator: ^3.1.0+1
@@ -77,6 +79,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/0.125x/
+    - assets/0.25x/
+    - assets/0.5x/
+    - assets/1x/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
