Removed Local LLM (For now) and added more functionality to cloud AI (Flashcard and Quiz generation)

--- a/study_app/pubspec.yaml
+++ b/study_app/pubspec.yaml
@@ -42,10 +42,10 @@ dependencies:
   flutter_quill: ^11.5.0
   google_fonts: ^6.3.3
   file_picker: ^8.1.2
+  syncfusion_flutter_pdf: ^28.1.33
   audioplayers: ^6.1.0
   quiver: ^3.2.1
   http: ^1.2.0
-  llama_cpp_dart: ^0.0.9
   shared_preferences: ^2.3.2
   archive: ^3.5.1
   sqlite3: ^2.4.0
