--- a/study_app/pubspec.yaml
+++ b/study_app/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   timezone: ^0.9.2
   rename: ^3.1.0
+  window_manager: ^0.3.8
+  pdfx: ^2.5.0
 
 dev_dependencies:
   isar_generator: ^3.1.0+1
