--- a/study_app/windows/CMakeLists.txt
+++ b/study_app/windows/CMakeLists.txt
@@ -2,6 +2,9 @@
 cmake_minimum_required(VERSION 3.14)
 project(chiaru LANGUAGES CXX)
 
+# Allow external projects with older cmake_minimum_required versions.
+set(ENV{CMAKE_POLICY_VERSION_MINIMUM} 3.5)
+
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
 set(BINARY_NAME "chiaru")
