--- a/study_app/pubspec.yaml
+++ b/study_app/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   timezone: ^0.9.2
   rename: ^3.1.0
   window_manager: ^0.3.8
+  screen_retriever: ^0.1.9
   pdfx: ^2.5.0
 
 dev_dependencies:
