--- a/study_app/pubspec.yaml
+++ b/study_app/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   window_manager: ^0.3.8
   screen_retriever: ^0.1.9
   pdfx: ^2.5.0
+  flutter_markdown: ^0.7.4+1
 
 dev_dependencies:
   isar_generator: ^3.1.0+1
